# lore-video-bot

./: .env.template  .replit  HOW_TO_USE.md  README.md  config.py  main.py  pyproject.toml  replit.md  replit.nix  requirements.txt
attached_assets/: .env_1752080415975.template  README_1752080415977.md  main_1752080415976.py  requirements.txt  requirements_1752080415977.txt  test_prompt_1752080415978.txt
services/: authorize_youtube.py  drive_service.py  gemini_service.py  image_service.py  openai_service.py  telegram_bot.py  test_genai.py  tts_service.py  video_service.py  youtube_service.py
temp/: .gitkeep
utils/: logger.py
